[CELEBORN-171] Support JDK11.